[package]
name = "egui-parsed-text-field"
version = "0.1.0"
edition = "2021"
authors = [
	"Jasper Fortuin <zeskeertwee@gmail.com>",
]

license = "MIT"
repository = "https://github.com/zeskeertwee/egui-parsed-text-field"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.24.1"
log = "0.4.21"
